<resources>
    <string name="app_name">HelloWorld</string>
    <string name="primer_nombre">Primer Nombre </string>
    <string name="segundo_nombre">Segundo Nombre </string>
    <string name="primer_apellido">Primer Apellido </string>
    <string name="segundo_apellido">Segundo Apellido </string>
    <string name="titulo">Primer Programas en Android Studio </string>

    <string name="btn_saludo">Saludar</string>


</resources>
