<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:fontFamily="serif-monospace"
        android:textStyle="normal"

        android:text="@string/titulo"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/txtPrimerNombre"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_bot"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/primer_nombre"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/txtSegundoNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_bot"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/segundo_nombre"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/txtPrimerApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_bot"
        android:ems="10"
        android:hint="@string/primer_apellido"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/txtSegundoApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_bot"
        android:hint="@string/segundo_apellido"

        android:inputType="textPersonName"
        android:text="" />

    <Button
        android:id="@+id/btnSaludar"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_saludo"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_bot"
        />


    <TextView
        android:id="@+id/saludo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text=""
        android:layout_marginTop="60dp"
        android:textSize="18dp" />

</LinearLayout>